# leanSig

./: .gitignore  Cargo.toml  MODIFS.md  README.md
benches/: benchmark.rs  benchmark_aborting.rs  benchmark_poseidon.rs  benchmark_poseidon_top_level.rs  benchmark_sha.rs  demo_perf.rs
crates/leanVm/src/bytecode/: operation.rs
crates/leansig-wasm/: Cargo.toml
crates/leansig-wasm/src/: lib.rs
examples/: single_keygen.rs  single_keygen_2_32.rs
examples/chrome-extension-poc/: README.md  background.js  build.sh  manifest.json  wallet.css  wallet.html  wallet.js
scripts/: collect_demo_perf.sh
src/: array.rs  inc_encoding.rs  lib.rs  parallel.rs  serialization.rs  signature.rs  simd_utils.rs  symmetric.rs
src/inc_encoding/: basic_winternitz.rs  target_sum.rs
src/signature/: generalized_xmss.rs
src/signature/generalized_xmss/: instantiations_aborting.rs  instantiations_poseidon.rs  instantiations_poseidon_top_level.rs  instantiations_sha.rs
src/symmetric/: message_hash.rs  prf.rs  tweak_hash.rs  tweak_hash_tree.rs
src/symmetric/message_hash/: aborting.rs  poseidon.rs  top_level_poseidon.rs
src/symmetric/prf/: shake_to_field.rs
src/symmetric/tweak_hash/: poseidon.rs
